styling- desktop version with correct image size and content spacing

--- a/components/description/Description.module.css
+++ b/components/description/Description.module.css
@@ -26,5 +26,6 @@
     line-height: 25px;
     font-weight: 400;
     text-align: left;
+    margin-bottom: 50px;
   }
 }
