--- a/components/pageMenuTab/PageMenuTab.module.css
+++ b/components/pageMenuTab/PageMenuTab.module.css
@@ -37,7 +37,7 @@
 
 @media screen and (min-width: 1440px) {
   .main {
-    width: 350px;
+    min-width: 350px;
     padding: 0;
   }
 }
