--- a/components/topBarBanner/TopBarBanner.module.css
+++ b/components/topBarBanner/TopBarBanner.module.css
@@ -35,5 +35,6 @@
     line-height: 104px;
     text-transform: uppercase;
     color: #ffffff;
+    margin-bottom: 0;
   }
 }
